--- a/KanjiRyokucha/PagedReviewViewController.xib
+++ b/KanjiRyokucha/PagedReviewViewController.xib
@@ -1,18 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PagedReviewViewController" customModule="KanjiRyokucha" customModuleProvider="target">
             <connections>
+                <outlet property="gradientView" destination="c7K-rh-8f3" id="ojg-Li-XX0"/>
                 <outlet property="pageContainer" destination="CRY-GO-HNd" id="dQu-8e-6Ok"/>
-                <outlet property="pageControl" destination="8Sa-1y-p2i" id="67T-mm-ZaQ"/>
+                <outlet property="progressView" destination="8QP-Ir-Jng" id="udX-aI-qEw"/>
                 <outlet property="videoContainer" destination="KQ8-gX-IPM" id="GRS-5z-e43"/>
                 <outlet property="videoPanel" destination="TGK-Pn-veR" id="6Fm-wF-hvz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -23,6 +24,10 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c7K-rh-8f3">
+                    <rect key="frame" x="0.0" y="400" width="375" height="267"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CRY-GO-HNd">
                     <rect key="frame" x="20" y="40" width="335" height="562"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -56,21 +61,23 @@
                         <constraint firstAttribute="trailing" secondItem="KQ8-gX-IPM" secondAttribute="trailing" id="mUS-ev-xYC"/>
                     </constraints>
                 </view>
-                <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="8Sa-1y-p2i">
-                    <rect key="frame" x="0.0" y="610" width="375" height="37"/>
-                </pageControl>
+                <progressView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="8QP-Ir-Jng">
+                    <rect key="frame" x="20" y="604" width="335" height="2.5"/>
+                    <color key="progressTintColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="trackTintColor" red="0.87450980389999999" green="1" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
+                </progressView>
             </subviews>
             <constraints>
                 <constraint firstItem="CRY-GO-HNd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="2LE-Kq-Daj"/>
+                <constraint firstItem="8QP-Ir-Jng" firstAttribute="leading" secondItem="CRY-GO-HNd" secondAttribute="leading" id="6KA-O0-Jkc"/>
                 <constraint firstItem="CRY-GO-HNd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" symbolic="YES" id="881-Ej-liC"/>
                 <constraint firstAttribute="trailing" secondItem="CRY-GO-HNd" secondAttribute="trailing" constant="20" symbolic="YES" id="94W-6o-iFm"/>
+                <constraint firstItem="8QP-Ir-Jng" firstAttribute="width" secondItem="CRY-GO-HNd" secondAttribute="width" id="AS8-w9-E0r"/>
+                <constraint firstAttribute="bottom" secondItem="8QP-Ir-Jng" secondAttribute="bottom" constant="61.5" id="CSv-Ol-4iw"/>
                 <constraint firstItem="TGK-Pn-veR" firstAttribute="top" secondItem="CRY-GO-HNd" secondAttribute="top" id="Gew-rC-yUJ"/>
-                <constraint firstAttribute="bottom" secondItem="8Sa-1y-p2i" secondAttribute="bottom" constant="20" symbolic="YES" id="KFN-YI-7dd"/>
-                <constraint firstItem="8Sa-1y-p2i" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="LhU-kE-1gj"/>
-                <constraint firstItem="8Sa-1y-p2i" firstAttribute="top" secondItem="CRY-GO-HNd" secondAttribute="bottom" constant="8" symbolic="YES" id="PA0-1W-A60"/>
+                <constraint firstItem="8QP-Ir-Jng" firstAttribute="top" secondItem="CRY-GO-HNd" secondAttribute="bottom" constant="2" id="g1w-2D-to0"/>
                 <constraint firstItem="TGK-Pn-veR" firstAttribute="leading" secondItem="CRY-GO-HNd" secondAttribute="leading" id="ll7-iv-jGW"/>
                 <constraint firstItem="TGK-Pn-veR" firstAttribute="height" secondItem="CRY-GO-HNd" secondAttribute="height" id="rTc-oK-non"/>
-                <constraint firstItem="8Sa-1y-p2i" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vqe-6q-QaB"/>
                 <constraint firstItem="TGK-Pn-veR" firstAttribute="width" secondItem="CRY-GO-HNd" secondAttribute="width" id="yad-ui-kTa"/>
             </constraints>
             <point key="canvasLocation" x="34.5" y="53.5"/>
