login screen overhaul

--- a/KanjiRyokucha/CredentialsViewController.xib
+++ b/KanjiRyokucha/CredentialsViewController.xib
@@ -1,18 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CredentialsViewController" customModule="KanjiRyokucha" customModuleProvider="target">
             <connections>
+                <outlet property="loginButton" destination="1aI-wY-QJu" id="v0d-aY-xaa"/>
                 <outlet property="loginContainer" destination="h6g-Ix-9mH" id="c0T-fq-iTJ"/>
                 <outlet property="passwordField" destination="GCW-cT-lfx" id="H2k-Va-nTQ"/>
+                <outlet property="signupButton" destination="pNb-6v-x7W" id="eS6-8K-f98"/>
                 <outlet property="storeSwitch" destination="ZYF-Iu-O2d" id="rsG-NN-v2M"/>
                 <outlet property="usernameField" destination="qgE-1E-d3C" id="M5u-ty-flB"/>
                 <outlet property="versionLabel" destination="gEb-v8-ePA" id="e9W-DK-0tA"/>
@@ -24,14 +26,32 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="522"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="kanji ryokucha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWx-SD-x5n">
+                    <rect key="frame" x="76" y="455" width="223" height="42"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v 0.1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEb-v8-ePA">
+                    <rect key="frame" x="274" y="497" width="25" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Kanji Koohii credentials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sxz-Z0-daI">
+                    <rect key="frame" x="58" y="40" width="259.5" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h6g-Ix-9mH">
-                    <rect key="frame" x="40" y="92.5" width="295" height="172"/>
+                    <rect key="frame" x="62.5" y="69" width="250" height="212"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="wa0-BA-FF7">
-                            <rect key="frame" x="0.0" y="0.0" width="295" height="172"/>
+                            <rect key="frame" x="0.0" y="0.0" width="250" height="212"/>
                             <subviews>
                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qgE-1E-d3C">
-                                    <rect key="frame" x="0.0" y="0.0" width="295" height="34"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="250" height="44"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                     <connections>
@@ -39,7 +59,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GCW-cT-lfx">
-                                    <rect key="frame" x="0.0" y="46" width="295" height="34"/>
+                                    <rect key="frame" x="0.0" y="56" width="250" height="44"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                     <connections>
@@ -47,28 +67,35 @@
                                     </connections>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DIM-fk-1bX">
-                                    <rect key="frame" x="0.0" y="92" width="295" height="34"/>
+                                    <rect key="frame" x="0.0" y="112" width="250" height="44"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="store credentials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="slj-qM-lAt">
-                                            <rect key="frame" x="20" y="7.5" width="127.5" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="remember login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="slj-qM-lAt">
+                                            <rect key="frame" x="20" y="12.5" width="120" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ZYF-Iu-O2d">
-                                            <rect key="frame" x="226" y="2" width="51" height="31"/>
+                                            <rect key="frame" x="181" y="7" width="51" height="31"/>
+                                            <color key="onTintColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </switch>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="34" id="FDi-NJ-1kA"/>
+                                        <constraint firstAttribute="height" constant="44" id="FDi-NJ-1kA" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="📱3¨5_const">
+                                                    <real key="value" value="38"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </constraint>
                                         <constraint firstAttribute="trailing" secondItem="ZYF-Iu-O2d" secondAttribute="trailing" constant="20" symbolic="YES" id="Gkb-kp-a5C"/>
                                         <constraint firstItem="ZYF-Iu-O2d" firstAttribute="centerY" secondItem="DIM-fk-1bX" secondAttribute="centerY" id="IwZ-Xe-8Uv"/>
                                         <constraint firstItem="slj-qM-lAt" firstAttribute="centerY" secondItem="DIM-fk-1bX" secondAttribute="centerY" id="Wwt-cL-vGL"/>
                                         <constraint firstItem="slj-qM-lAt" firstAttribute="leading" secondItem="DIM-fk-1bX" secondAttribute="leading" constant="20" symbolic="YES" id="dS0-Ha-eno"/>
                                     </constraints>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1aI-wY-QJu">
-                                    <rect key="frame" x="0.0" y="138" width="295" height="34"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1aI-wY-QJu" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="168" width="250" height="44"/>
                                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <state key="normal" title="Login"/>
                                     <connections>
@@ -90,33 +117,31 @@
                     <constraints>
                         <constraint firstItem="wa0-BA-FF7" firstAttribute="top" secondItem="h6g-Ix-9mH" secondAttribute="top" id="2H3-pq-8vu"/>
                         <constraint firstItem="wa0-BA-FF7" firstAttribute="leading" secondItem="h6g-Ix-9mH" secondAttribute="leading" id="6YX-iE-ZJf"/>
-                        <constraint firstAttribute="width" constant="295" id="Ccf-n2-k63"/>
+                        <constraint firstAttribute="width" constant="250" id="Ccf-n2-k63"/>
                         <constraint firstAttribute="trailing" secondItem="wa0-BA-FF7" secondAttribute="trailing" id="HVh-WZ-nLI"/>
                         <constraint firstAttribute="bottom" secondItem="wa0-BA-FF7" secondAttribute="bottom" id="bN5-KZ-7NI"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kanji Ryokucha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XWx-SD-x5n">
-                    <rect key="frame" x="69.5" y="20" width="236.5" height="42"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v 0.1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEb-v8-ePA">
-                    <rect key="frame" x="281" y="70" width="25" height="14.5"/>
-                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNb-6v-x7W">
+                    <rect key="frame" x="62" y="312" width="250" height="34"/>
+                    <state key="normal" title="or Sign Up now at Kanji Koohii">
+                        <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                </button>
             </subviews>
-            <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.87450980389999999" green="1" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="pNb-6v-x7W" firstAttribute="width" secondItem="1aI-wY-QJu" secondAttribute="width" id="DKN-2h-bya"/>
                 <constraint firstItem="h6g-Ix-9mH" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="HYp-X8-FXk"/>
-                <constraint firstItem="gEb-v8-ePA" firstAttribute="top" secondItem="XWx-SD-x5n" secondAttribute="bottom" constant="8" symbolic="YES" id="M8I-TY-Me0"/>
+                <constraint firstItem="pNb-6v-x7W" firstAttribute="top" secondItem="h6g-Ix-9mH" secondAttribute="bottom" constant="31" id="Lbd-9J-A5X"/>
                 <constraint firstItem="XWx-SD-x5n" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PGi-Wz-9F3"/>
-                <constraint firstItem="gEb-v8-ePA" firstAttribute="top" secondItem="XWx-SD-x5n" secondAttribute="bottom" constant="8" id="Pml-Yu-F2V"/>
-                <constraint firstItem="h6g-Ix-9mH" firstAttribute="top" secondItem="gEb-v8-ePA" secondAttribute="bottom" constant="8" symbolic="YES" id="R3Q-e6-UCP"/>
+                <constraint firstItem="gEb-v8-ePA" firstAttribute="top" secondItem="XWx-SD-x5n" secondAttribute="bottom" id="Pml-Yu-F2V"/>
+                <constraint firstItem="Sxz-Z0-daI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="S7u-KN-6Xx"/>
+                <constraint firstItem="pNb-6v-x7W" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="boQ-o8-4fh"/>
+                <constraint firstItem="Sxz-Z0-daI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="iSs-MZ-K9x"/>
                 <constraint firstItem="gEb-v8-ePA" firstAttribute="trailing" secondItem="XWx-SD-x5n" secondAttribute="trailing" id="nZN-Wt-IER"/>
-                <constraint firstItem="XWx-SD-x5n" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" symbolic="YES" id="wvm-eB-OM1"/>
+                <constraint firstAttribute="bottom" secondItem="XWx-SD-x5n" secondAttribute="bottom" constant="25" id="uAF-5K-K6Q"/>
+                <constraint firstItem="h6g-Ix-9mH" firstAttribute="top" secondItem="Sxz-Z0-daI" secondAttribute="bottom" constant="8" symbolic="YES" id="uh1-nT-tbd"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="35.5" y="-18"/>
