--- a/KanjiRyokucha/CredentialsViewController.xib
+++ b/KanjiRyokucha/CredentialsViewController.xib
@@ -127,6 +127,9 @@
                     <state key="normal" title="or Sign Up now at Kanji Koohii">
                         <color key="titleColor" red="0.54094521650000005" green="0.66909365109999996" blue="0.1146249371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="signupPressed:" destination="-1" eventType="touchUpInside" id="Rvp-gO-HuC"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.87450980389999999" green="1" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
