--- a/KanjiRyokucha/SRSViewController.xib
+++ b/KanjiRyokucha/SRSViewController.xib
@@ -137,6 +137,13 @@
                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
                                             <state key="normal" title="0"/>
                                         </button>
+                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+150" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s25-fk-anm">
+                                            <rect key="frame" x="57.5" y="86" width="28.5" height="14.5"/>
+                                            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="failed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jyK-gU-xy2" userLabel="failed">
                                             <rect key="frame" x="24" y="100.5" width="42" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -145,8 +152,10 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
+                                        <constraint firstItem="jyK-gU-xy2" firstAttribute="top" secondItem="s25-fk-anm" secondAttribute="bottom" id="0ha-Z9-vFs"/>
                                         <constraint firstAttribute="width" constant="90" id="2Mj-Cb-q7c"/>
                                         <constraint firstAttribute="bottom" secondItem="qzQ-Em-Qkj" secondAttribute="bottom" constant="4" id="52J-hQ-Nv8"/>
+                                        <constraint firstAttribute="trailing" secondItem="s25-fk-anm" secondAttribute="trailing" constant="4" id="E9W-L5-a8i"/>
                                         <constraint firstItem="qzQ-Em-Qkj" firstAttribute="top" secondItem="2dg-30-VUX" secondAttribute="top" constant="20" id="MbL-sm-fux"/>
                                         <constraint firstItem="jyK-gU-xy2" firstAttribute="centerX" secondItem="2dg-30-VUX" secondAttribute="centerX" id="R1N-mq-Idn"/>
                                         <constraint firstAttribute="trailing" secondItem="qzQ-Em-Qkj" secondAttribute="trailing" id="f1a-Zg-Kjq"/>
@@ -162,19 +171,8 @@
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W9L-yc-vci">
                                     <rect key="frame" x="0.0" y="125" width="90" height="0.0"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="150 to study" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s25-fk-anm">
-                                            <rect key="frame" x="0.0" y="0.0" width="90" height="14.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
                                     <constraints>
-                                        <constraint firstItem="s25-fk-anm" firstAttribute="top" secondItem="W9L-yc-vci" secondAttribute="top" id="PL2-CD-Dgu"/>
-                                        <constraint firstItem="s25-fk-anm" firstAttribute="leading" secondItem="W9L-yc-vci" secondAttribute="leading" id="eg9-fS-zdG"/>
                                         <constraint firstAttribute="height" id="gUN-le-5jg"/>
-                                        <constraint firstAttribute="trailing" secondItem="s25-fk-anm" secondAttribute="trailing" id="jAh-xo-JLJ"/>
                                     </constraints>
                                 </view>
                             </subviews>
